syntax = "proto3";

package movie;


message Movie {
  int32 id = 1;
  string title = 2;
  string description = 3;

}



message GetMovieRequest {
  int32 movie_id = 1;
}

message GetMovieResponse {
  Movie movie = 1;
}

message SearchMoviesRequest {
  string query = 1;
}

message SearchMoviesResponse {
  repeated Movie movies = 1;
}

message CreateMovieRequest {
  int32 movie_id = 1;
  string title = 2;
  string description = 3;
}

message CreateMovieResponse {
  Movie movie = 1;
}

service MovieService {
  rpc GetMovie(GetMovieRequest) returns (GetMovieResponse);
  rpc SearchMovies(SearchMoviesRequest) returns (SearchMoviesResponse);
  rpc CreateMovie(CreateMovieRequest) returns (CreateMovieResponse);
}